# Gold-Analysis-Bot

./: .replit  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
artifacts/gold-bot/: main.py  requirements.txt
artifacts/gold-bot/data/: signal_state.json  subscribers.json  trades.json
artifacts/gold-bot/src/: alerts.py  chart_analysis.py  chart_annotator.py  chart_generator.py  config.py  image_gen.py  market_hours.py  news.py  trade_tracker.py
artifacts/gold-bot/src/analysis/: __init__.py  cache.py  engine.py  market_data.py
artifacts/gold-bot/src/handlers/: __init__.py  callbacks.py  commands.py  messages.py  photos.py
artifacts/gold-bot/src/utils/: __init__.py  formatting.py  keyboards.py
