[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.1",
    "matplotlib>=3.11.0",
    "mplfinance>=0.12.10b0",
    "openai>=2.0.0",
    "pandas>=3.0.3",
    "pillow>=10.0.0",
    "python-dotenv==1.0.0",
    "python-telegram-bot[job-queue]==20.7",
]
